[tool.pyright]
 exclude =  ["**/__pycache__"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
reportMissingImports = false
reportMissingTypeStubs = false

pythonVersion = "3.11.4"
pythonPlatform = "Linux"

[project]
name = "algorithms"
version = "0.1.0"
description = "A testbed for data structure algorithms"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
